antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__chat_composer__tests__task_mention_popup.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
" ┃ @migr                                                                                            "
" ┃                                                                                                  "
" ┃                                                                                                  "
"                                                                                                    "
"> Review database migration  /workspace/project                                               Task  "
"  migration                  /another/project                                                 Task  "
"                                                                                                    "
"  enter insert · esc close · ←/→ switch search modes     [All Results]   Filesystem Only    Plugins "
